# vancrental-hunt

./: .env.example  .gitignore  CLAUDE.md  README.md  criteria.example.yaml  criteria.yaml  pyproject.toml
src/housing_scraper/: cli.py  config.py  db.py  extract.py  geocode.py  models.py  report.py  score.py  search_intent.py  server.py
src/housing_scraper/sources/: apify_actors.py  base.py  craigslist.py  livrent.py  wesbrook.py
web/: dashboard.html  index.html
