[project]
name = "housing-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "keananwongso", email = "keananwongso7@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "apify-client>=3.0.6",
    "curl-cffi>=0.15.0",
    "jinja2>=3.1.6",
    "openai>=2.46.0",
    "parsel>=1.11.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
housing-scraper = "housing_scraper:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
